--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,14 @@
 movies = {
-  url = "jdbc:sqlite:movies.db"
+  // url = "jdbc:sqlite:movies.db"
+  url = "jdbc:sqlite:db/movies.db"
   driver = org.sqlite.JDBC
   connectionPool = disabled
   keepAliveConnection = true
 }
 
 coffees = {
-  url = "jdbc:sqlite:coffees.db"
+  // url = "jdbc:sqlite:coffees.db"
+  url = "jdbc:sqlite:db/coffees.db"
   driver = org.sqlite.JDBC
   connectionPool = disabled
   keepAliveConnection = true
